--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "websockets==10.4",
     "pymongo==4.3.3",
     "dnspython==2.3.0",
-    "pytz==2022.7.1"
+    "pytz==2022.7.1",
+    "python-dotenv==0.21.1"
 ]
 [tool.setuptools.packages.find]
 where = ["src"]
