CHORE: gitignore -> excluded __pycache__

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dist/
 src/wazirx/rest/wazir_trader.egg-info/
 src/__pycache__/
 src/trade/__pycache__/
+src/trade/strategy/__pycache__/
 src/wazirx/__pycache__/
 src/wazirx/rest/__pycache__/
 src/wazirx/websocket/__pycache__/
